tests/derive_ui/value_enum_non_unit.rs
use clap::ValueEnum;

#[derive(ValueEnum, Clone, Debug)]
enum Opt {
    Foo(usize),
}

fn main() {
    println!("{:?}", Opt::Foo(42));
}
